@@ -175,7 +175,11 @@ public class DistributedIntervalFacetingTest extends
     params.set("facet", "true");
     params.set("rows", "0");
     String field = fields[random().nextInt(fields.length)]; //choose from any of the fields
-    params.set("facet.interval", field);
+    if (random().nextBoolean()) {
+      params.set("facet.interval", field);
+    } else  {
+      params.set("facet.interval", getFieldWithKey(field));
+    }
     // number of intervals
     for (int i = 0; i < 1 + random().nextInt(20); i++) {
       Integer[] interval = getRandomRange(cardinality, field);
@@ -185,6 +189,10 @@ public class DistributedIntervalFacetingTest extends
     }
     query(params);
 
+  }
+
+  private String getFieldWithKey(String field) {
+    return "{!key='_some_key_for_" + field + "_" + System.currentTimeMillis() + "'}" + field;
   }
 
   /**
